提示消息优化